feat: Implement dark mode and update React dependencies
Updates dependencies to React 19.2.1 and introduces dark mode support.

The `index.html` file is modified to include Tailwind CSS configuration for dark mode and set default body classes for light and dark themes. Scrollbar styles are also adjusted for better visibility in dark mode.

The `types.ts` file is updated to include a `Theme` type and an `AppSettings` interface to manage application settings including theme preference.

The `geminiService.ts` file adds a new function `generateLogo` for AI-powered logo creation.

Several components (`Header.tsx`, `IndexCard.tsx`, `MacroSection.tsx`) are updated to respect the new theme settings and utilize the `useSettings` hook instead of the previous `useLanguage` hook.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>專業金融儀表板與技術分析</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              slate: { 
+                850: '#1e293b',
+                900: '#0f172a',
+                950: '#020617'
+              } 
+            }
+          }
+        }
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #f1f5f9;
       }
       /* Custom scrollbar for cleaner look */
       ::-webkit-scrollbar {
@@ -17,11 +32,14 @@
         height: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #f1f5f9; 
+        background: transparent; 
       }
       ::-webkit-scrollbar-thumb {
         background: #cbd5e1; 
         border-radius: 4px;
+      }
+      .dark ::-webkit-scrollbar-thumb {
+        background: #475569; 
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8; 
@@ -41,7 +59,7 @@
 }
 </script>
 </head>
-  <body>
+  <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
